Adding encode/decode options to Text Tools

--- a/index.html
+++ b/index.html
@@ -735,6 +735,8 @@
                                                         <option value="removenumbers">Remove all numbers</option>
                                                         <option value="removeletters">Remove all letters</option>
                                                         <option value="specialcharsonly">Special characters only</option>
+                                                        <option value="urlencode">URL Encode</option>
+                                                        <option value="urldecode">URL Decode</option>
                                                     </select>
                                                     <button class="btn btn-outline-convrtr" type="button" id="toolChange">Do the thing!</button>
                                                 </div>
