--- a/index.html
+++ b/index.html
@@ -771,7 +771,7 @@
         </main>
 
         <footer class="text-dark bg-light">
-            <div class="p-4">
+            <div class="p-4 pb-2">
                 <p class="float-end mb-1">
                     <a href="#IOOBI9O4IEIEOIO4O4IB" class="btn btn-secondary" title="Back to top">
                         <i class="bi bi-arrow-up-square"></i>
@@ -780,6 +780,11 @@
                 <p class="mb-1">
                     &copy; @<a href="https://twitter.com/stickerboy" class="text-convrtr" title="Follow @stickerboy on Twitter">stickerboy</a> / <a href="https://www.kenny.cx/" title="kenny.cx - Personal website" class="text-convrtr">Kenny Cameron</a> 2022. <br />All Rights Reserved.
                 </p>
+            </div>
+            <div class="p-4 pt-2">
+                <abbr title="Release version: v1.0.1" class="d-inline-flex px-2 py-1 fw-semibold text-dark bg-success bg-opacity-25 border border-success border-opacity-10 rounded-2 text-decoration-none">
+                    <small>v1.0.1</small>
+                </abbr>
             </div>
         </footer>
 
