Responsive fixes for header nav
Prevent wrapping on certain screen sizes

--- a/index.html
+++ b/index.html
@@ -56,19 +56,19 @@
                                 <a class="nav-link active" href="#convrtrs">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#rotate">ROT text</a>
+                                <a class="nav-link" href="#rotate">ROT <span class="d-sm-inline-flex d-md-none d-lg-inline-flex">text</span></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#flip">Flip text</a>
+                                <a class="nav-link" href="#flip">Flip <span class="d-sm-inline-flex d-md-none d-lg-inline-flex">text</span></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#shift">Shift hex</a>
+                                <a class="nav-link" href="#shift">Shift <span class="d-sm-inline-flex d-md-none d-lg-inline-flex">hex</span></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#reverseHex">Reverse hex</a>
+                                <a class="nav-link" href="#reverseHex">Reverse <span class="d-sm-inline-flex d-md-none d-lg-inline-flex">hex</span></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#tools">Text tools</a>
+                                <a class="nav-link" href="#tools">Text <span class="d-sm-inline-flex d-md-none d-lg-inline-flex">tools</span></a>
                             </li>
                         </ul>
                         <span class="navbar-text text-white mx-0 mx-md-3">
