--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="h-100">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -38,7 +38,7 @@
         <meta name="msapplication-wide310x150logo" content="./assets/favicons/mstile-310x150.png" />
         <meta name="msapplication-square310x310logo" content="./assets/favicons/mstile-310x310.png" />
     </head>
-    <body id="IOOBI9O4IEIEOIO4O4IB" data-bs-spy="scroll" data-bs-target="#navbarText" data-bs-smooth-scroll="true">
+    <body id="IOOBI9O4IEIEOIO4O4IB" data-bs-spy="scroll" data-bs-target="#navbarText" data-bs-smooth-scroll="true" class="d-flex flex-column h-100 top-0">
     
         <header>
             <nav id="navbar" class="navbar fixed-top navbar-expand-md navbar-dark bg-convrtr shadow-sm">
@@ -80,7 +80,7 @@
             </section>
         </main>
 
-        <footer class="text-dark bg-light">
+        <footer class="mt-auto text-dark bg-light">
             <div class="p-4 pb-2">
                 <p class="float-end mb-1">
                     <a href="#IOOBI9O4IEIEOIO4O4IB" class="btn btn-secondary" title="Back to top">
