Setting up templates and partials

--- a/404.html
+++ b/404.html
@@ -1,3 +1,9 @@
+---
+layout: layout.liquid
+title: Zm91ciBvaCBmb3Vy - Convrtr
+permalink: /404.html
+---
+
 <!doctype html>
 <html lang="en" class="h-100">
     <head>
