--- a/404.html
+++ b/404.html
@@ -17,9 +17,9 @@ permalink: /404.html
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css" rel="stylesheet" type="text/css" />
         <!-- Bootstrap Core -->
-        <link href="./css/bootstrap.css" rel="stylesheet">
+        <link href="./assets/css/bootstrap.css" rel="stylesheet">
         <!-- Core theme CSS -->
-        <link href="./css/style.css" rel="stylesheet">
+        <link href="./assets/css/style.css" rel="stylesheet">
 
         <!-- Favicons -->
         <meta name="theme-color" content="#11806a">
@@ -99,7 +99,7 @@ permalink: /404.html
             </div>
         </footer>
 
-    <script src="./js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+    <script src="./assets/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 
 </body>
 </html>
