Updating partials and fixing 404 page
Set up front matters in 404 page
Added page-id to help target page specific items
Set up partials for tool and routes, moved to sub-folders to keep things cleaner

--- a/404.html
+++ b/404.html
@@ -1,74 +1,10 @@
 ---
 layout: layout.liquid
 title: Zm91ciBvaCBmb3Vy - Convrtr
+page-id: fourohfour
+page-heading: 404
 permalink: /404.html
 ---
-
-<!doctype html>
-<html lang="en" class="h-100">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="">
-        <meta name="author" content="Kenny Cameron / stickerboy">
-        <title>Convrtr - For everlost and Grollow!</title>
-
-        <link rel="canonical" href="https://www.kenny.cx/convrtrjs">
-        <!-- Bootstrap icons-->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css" rel="stylesheet" type="text/css" />
-        <!-- Bootstrap Core -->
-        <link href="./assets/css/bootstrap.css" rel="stylesheet">
-        <!-- Core theme CSS -->
-        <link href="./assets/css/style.css" rel="stylesheet">
-
-        <!-- Favicons -->
-        <meta name="theme-color" content="#11806a">
-        <link rel="apple-touch-icon-precomposed" sizes="57x57" href="./assets/favicons/apple-touch-icon-57x57.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="./assets/favicons/apple-touch-icon-114x114.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="./assets/favicons/apple-touch-icon-72x72.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="144x144" href="./assets/favicons/apple-touch-icon-144x144.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="60x60" href="./assets/favicons/apple-touch-icon-60x60.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="120x120" href="./assets/favicons/apple-touch-icon-120x120.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="76x76" href="./assets/favicons/apple-touch-icon-76x76.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="152x152" href="./assets/favicons/apple-touch-icon-152x152.png" />
-        <link rel="icon" type="image/png" href="./assets/favicons/favicon-196x196.png" sizes="196x196" />
-        <link rel="icon" type="image/png" href="./assets/favicons/favicon-96x96.png" sizes="96x96" />
-        <link rel="icon" type="image/png" href="./assets/favicons/favicon-32x32.png" sizes="32x32" />
-        <link rel="icon" type="image/png" href="./assets/favicons/favicon-16x16.png" sizes="16x16" />
-        <link rel="icon" type="image/png" href="./assets/favicons/favicon-128.png" sizes="128x128" />
-        <meta name="application-name" content="Convrtr"/>
-        <meta name="msapplication-TileColor" content="#FFFFFF" />
-        <meta name="msapplication-TileImage" content="./assets/favicons/mstile-144x144.png" />
-        <meta name="msapplication-square70x70logo" content="./assets/favicons/mstile-70x70.png" />
-        <meta name="msapplication-square150x150logo" content="./assets/favicons/mstile-150x150.png" />
-        <meta name="msapplication-wide310x150logo" content="./assets/favicons/mstile-310x150.png" />
-        <meta name="msapplication-square310x310logo" content="./assets/favicons/mstile-310x310.png" />
-    </head>
-    <body id="IOOBI9O4IEIEOIO4O4IB" data-bs-spy="scroll" data-bs-target="#navbarText" data-bs-smooth-scroll="true" class="d-flex flex-column h-100 top-0">
-    
-        <header>
-            <nav id="navbar" class="navbar fixed-top navbar-expand-md navbar-dark bg-convrtr shadow-sm">
-                <div class="container-fluid">
-                    <span class="navbar-brand text-white mb-0 h1 fw-normal">
-                        Convrtr
-                    </span>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" 
-                            aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarText">
-                        <ul class="navbar-nav me-auto mt-3 mt-md-0 mb-2 mb-md-0">
-                            <li class="nav-item">
-                                <a class="nav-link active" href="https://www.kenny.cx/convrtrjs/">Home</a>
-                            </li>
-                        </ul>
-                        <span class="navbar-text text-white mx-0 mx-md-3">
-                            For everlost and Grollow!
-                        </span>
-                    </div>
-                </div>
-            </nav>
-        </header>
 
         <main class="flex-shrink-0">
             <section id="home">
@@ -76,7 +12,7 @@ permalink: /404.html
                   <div class="container">
                       <div class="row justify-content-center">
                           <div class="col-md-12 text-center">
-                              <h1 class="display-1 d-block">404</h1>
+                              <h1 class="display-1 d-block">{{ page-heading }}</h1>
                               <div class="mb-4 lead">The page you are looking for was not found.</div>
                               <a href="https://www.kenny.cx/convrtrjs/" class="btn btn-link text-convrtr">Back to Home</a>
                           </div>
@@ -85,30 +21,3 @@ permalink: /404.html
                 </div>
             </section>
         </main>
-
-        <footer class="mt-auto text-dark bg-light">
-            <div class="p-4 pb-2">
-                <p class="mb-1">
-                    &copy; @<a href="https://twitter.com/stickerboy" class="text-convrtr" title="Follow @stickerboy on Twitter">stickerboy</a> / <a href="https://www.kenny.cx/" title="kenny.cx - Personal website" class="text-convrtr">Kenny Cameron</a> 2022. <br />All Rights Reserved.
-                </p>
-            </div>
-            <div class="p-4 pt-2">
-                <abbr title="Release version: v1.0.1" class="d-inline-flex px-2 py-1 fw-semibold text-dark bg-success bg-opacity-25 border border-success border-opacity-10 rounded-2 text-decoration-none">
-                    <small>v1.0.1</small>
-                </abbr>
-            </div>
-        </footer>
-
-    <script src="./assets/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-
-</body>
-</html>
-<!--
-//START FILE/ MzMtYzMtMDItOTYtODYtMzQtMDItMjctZjYtNjQ
-/Packet detected..
-/Processing......
-/Packet found:
-/VGtSVmRFNVVTWFJPUjFsMFRsUk4
-/END FILE ../
-Smile, you’re born again
--->
