Update partials location on homepage

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@ layout: layout.liquid
 title: Convrtr - For everlost and Grollow!
 page-id: home
 ---
-
         <main>
             <section id="home">
                 <div class="convrtrs py-5 pb-4 px-2 px-sm-4">
@@ -20,11 +19,10 @@ page-id: home
                 </div>
             </section>
 
-            {% render "home/convrtrs" %}
-            {% render "home/rotate" %}
-            {% render "home/flip" %}
-            {% render "home/shift" %}
-            {% render "home/reversehex" %}
-            {% render "home/tools" %}
+            {% render "partials/home/convrtrs" %}
+            {% render "partials/home/rotate" %}
+            {% render "partials/home/flip" %}
+            {% render "partials/home/shift" %}
+            {% render "partials/home/reversehex" %}
+            {% render "partials/home/tools" %}
         </main>
-
