Update and fix meta rendering

--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 ---
 layout: layout.liquid
-title: Zm91ciBvaCBmb3Vy - Convrtr
+title: Zm91ciBvaCBmb3Vy
 page-id: fourohfour
 permalink: /404.html
 ---
