--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: layout.liquid
-title: Convrtr - For everlost and Grollow!
+title: For everlost and Grollow!
 page-id: home
 ---
         <main>
