--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ page-id: home
 
             {% render "partials/home/convrtrs" %}
             {% render "partials/home/rotate" %}
+            {% render "partials/home/vigenere" %}
             {% render "partials/home/flip" %}
             {% render "partials/home/shift" %}
             {% render "partials/home/reversehex" %}
