Nav menu overhaul
Simplifying the navigation menu, after some thought - was getting too busy with that amount of links

Switched to dropdown menus and categorized each tool
Removed the home button, as it was causing issues with scrollspy and there doesn't seem to be an easy way to resolve it
Removed top positioning on body in favor of a CSS margin class
Fixed dropdown active class colors
Removed grid column layout from mobile menu
Adjusted dropdown toggles on mobile so that the arrow stretches out full width (looks a bit better)

Change position of text tools to match nav grouping
Moved scrollspy targeting to main element instead of body
Updated threshold and root-margin properties - I almost understand what I did here and it seems to be close enough to what I want to happen, so I'm happy with it

--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@ layout: layout.liquid
 title: For everlost and Grollow!
 page-id: home
 ---
-        <main>
+<main class="mt-5"
+        data-bs-spy="scroll" 
+        data-bs-target="#navbarText" 
+        data-bs-smooth-scroll="true"
+        data-bs-threshold="0,1"
+        data-bs-root-margin="10% 0% -90%">
             <section id="home">
-                <div class="convrtrs py-5 pb-4 px-2 px-sm-4">
+                <div class="py-5 pb-4 px-2 px-sm-4">
                     <div class="section-heading">
                         <h1 class="display-6">Encoding and Decoding</h1>
                         <hr>
@@ -20,10 +25,10 @@ page-id: home
             </section>
 
             {% render "partials/home/convrtrs" %}
+            {% render "partials/home/tools" %}
             {% render "partials/home/flip" %}
             {% render "partials/home/shift" %}
             {% render "partials/home/reversehex" %}
-            {% render "partials/home/tools" %}
             {% render "partials/home/rotate" %}
             {% render "partials/home/vigenere" %}
         </main>
