--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@ page-id: fourohfour
 permalink: /404.html
 ---
 
-        <main class="flex-shrink-0">
+        <main class="flex-shrink-0 mt-5">
             <section id="home">
                 <div class="d-flex flex-row align-items-center pt-5 mt-5">
                   <div class="container">
