Move convrtrs to liquid
Set up a data file to map all convrtrs
Still need to triple check all the params against live again, make sure everything is firing, but this reduces the amount of duplication and makes is easier to set up new ones
Had to rename js file as it was getting included multiple times due to the same name

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ page-id: home
                 </div>
             </section>
 
-            {% render "partials/home/convrtrs" %}
+            {% include "partials/home/convrtrs" %}
             {% render "partials/home/tools" %}
             {% render "partials/home/flip" %}
             {% render "partials/home/shift" %}
