Add character frequencies to home page

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ page-id: home
             {% include "partials/home/convrtrs" %}
             {% render "partials/home/tools" %}
             {% render "partials/home/flip" %}
+            {% render "partials/home/frequencies" %}
             {% render "partials/home/shift" %}
             {% render "partials/home/reversehex" %}
             {% render "partials/home/rotate" %}
