Adding max-width constraints to overall layout
Max width of 1920px, ensure content is centered when going above
Add rounded borders to each alternate section when above 1920

--- a/ciphers.html
+++ b/ciphers.html
@@ -3,7 +3,7 @@ layout: layout.liquid
 title: Cipher tools
 page-id: ciphers
 ---
-<main class="mt-5"
+<main class="mt-5 ms-auto me-auto mw"
         data-bs-spy="scroll" 
         data-bs-target="#navbarText" 
         data-bs-smooth-scroll="true"
