Simplifying alphabet list for rotation

--- a/ciphers.html
+++ b/ciphers.html
@@ -10,7 +10,7 @@ page-id: ciphers
         data-bs-threshold="0,1"
         data-bs-root-margin="10% 0% -90%">
             {% render "partials/ciphers/home" %}
-            {% render "partials/ciphers/rotate" %}
+            {% include "partials/ciphers/rotate" %}
             {% render "partials/ciphers/vigenere" %}
             {% render "partials/ciphers/hash" %}
         </main>
