Setting up some reusable components
Starting with select, copy and download buttons

--- a/ciphers.html
+++ b/ciphers.html
@@ -11,6 +11,6 @@ page-id: ciphers
         data-bs-root-margin="10% 0% -90%">
             {% render "partials/ciphers/home" %}
             {% include "partials/ciphers/rotate" %}
-            {% render "partials/ciphers/vigenere" %}
-            {% render "partials/ciphers/hash" %}
+            {% include "partials/ciphers/vigenere" %}
+            {% include "partials/ciphers/hash" %}
         </main>
