--- a/hex.html
+++ b/hex.html
@@ -10,6 +10,6 @@ page-id: hex
         data-bs-threshold="0,1"
         data-bs-root-margin="10% 0% -90%">
             {% render "partials/hex/home" %}
-            {% render "partials/hex/shift" %}
-            {% render "partials/hex/reversehex" %}
+            {% include "partials/hex/shift" %}
+            {% include "partials/hex/reversehex" %}
         </main>
