--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ page-id: home
         data-bs-root-margin="10% 0% -90%">
             {% render "partials/home/home" %}
             {% include "partials/home/convrtrs" %}
-            {% render "partials/home/tools" %}
-            {% render "partials/home/flip" %}
-            {% render "partials/home/frequencies" %}
+            {% include "partials/home/tools" %}
+            {% include "partials/home/flip" %}
+            {% include "partials/home/frequencies" %}
         </main>
