Replace characters tool
Adding the liquid template and associated js to call up the replace function
Added support for replacement chaining, similar to command chaining in Text Tools

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ page-id: home
             {% render "partials/home/home" %}
             {% include "partials/home/convrtrs" %}
             {% include "partials/home/tools" %}
+            {% include "partials/home/replace" %}
             {% include "partials/home/flip" %}
             {% include "partials/home/frequencies" %}
         </main>
