Set up liquid template and sub buttons

--- a/ciphers.html
+++ b/ciphers.html
@@ -11,6 +11,7 @@ page-id: ciphers
         data-bs-root-margin="10% 0% -90%">
             {% render "partials/ciphers/home" %}
             {% include "partials/ciphers/rotate" %}
+            {% include "partials/ciphers/sub" %}
             {% include "partials/ciphers/vigenere" %}
             {% include "partials/ciphers/hash" %}
         </main>
