ROT -> Caesar and command chaining
Renamed ROT to Caesar and updated into paragraph to be a bit more accurate

Add chain command ability to allow running multiple different rotations, bases on the results rather than the original text

--- a/ciphers.html
+++ b/ciphers.html
@@ -10,7 +10,7 @@ page-id: ciphers
         data-bs-threshold="0,1"
         data-bs-root-margin="10% 0% -90%">
             {% render "partials/ciphers/home" %}
-            {% include "partials/ciphers/rotate" %}
+            {% include "partials/ciphers/caesar" %}
             {% include "partials/ciphers/sub" %}
             {% include "partials/ciphers/vigenere" %}
             {% include "partials/ciphers/hash" %}
