--- a/misc.html
+++ b/misc.html
@@ -10,4 +10,8 @@ page-id: misc
         data-bs-threshold="0,1"
         data-bs-root-margin="10% 0% -90%">
             {% render "partials/misc/home" %}
+            {% render "partials/misc/elements" %}
         </main>
+    <script>
+        const ELEMENTS = {{ elements | json }};
+    </script>
