--- a/misc.html
+++ b/misc.html
@@ -12,6 +12,7 @@ page-id: misc
             {% render "partials/misc/home" %}
             {% render "partials/misc/elements" %}
             {% render "partials/misc/forerunner" %}
+            {% render "partials/misc/covenant" %}
         </main>
     <script>
         const ELEMENTS = {{ elements | json }};
