Initial start on adding Braille support

--- a/misc.html
+++ b/misc.html
@@ -10,6 +10,7 @@ page-id: misc
         data-bs-threshold="0,1"
         data-bs-root-margin="10% 0% -90%">
             {% render "partials/misc/home" %}
+            {% render "partials/misc/braille" %}
             {% render "partials/misc/elements" %}
             {% render "partials/misc/forerunner" %}
             {% render "partials/misc/covenant" %}
