--- a/ciphers.html
+++ b/ciphers.html
@@ -8,7 +8,8 @@ page-id: ciphers
         data-bs-target="#navbarText" 
         data-bs-smooth-scroll="true"
         data-bs-threshold="0,1"
-        data-bs-root-margin="10% 0% -90%">
+        data-bs-root-margin="10% 0% -90%"
+        id="content">
             {% render "partials/ciphers/home" %}
             {% include "partials/ciphers/caesar" %}
             {% include "partials/ciphers/sub" %}
