--- a/files.html
+++ b/files.html
@@ -8,7 +8,8 @@ page-id: files
         data-bs-target="#navbarText" 
         data-bs-smooth-scroll="true"
         data-bs-threshold="0,1"
-        data-bs-root-margin="10% 0% -90%">
+        data-bs-root-margin="10% 0% -90%"
+        id="content">
             {% render "partials/files/home" %}
             {% render "partials/files/filecheck" %}
             {% include "partials/files/headers" %}
