--- a/hex.html
+++ b/hex.html
@@ -8,7 +8,8 @@ page-id: hex
         data-bs-target="#navbarText" 
         data-bs-smooth-scroll="true"
         data-bs-threshold="0,1"
-        data-bs-root-margin="10% 0% -90%">
+        data-bs-root-margin="10% 0% -90%"
+        id="content">
             {% render "partials/hex/home" %}
             {% include "partials/hex/shift" %}
             {% include "partials/hex/reversehex" %}
