--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@ page-id: home
         data-bs-target="#navbarText" 
         data-bs-smooth-scroll="true"
         data-bs-threshold="0,1"
-        data-bs-root-margin="10% 0% -90%">
+        data-bs-root-margin="10% 0% -90%"
+        id="content">
             {% render "partials/home/home" %}
             {% include "partials/home/convrtrs" %}
             {% include "partials/home/tools" %}
