Fix page titles

--- a/files.html
+++ b/files.html
@@ -1,6 +1,6 @@
 ---
 layout: layout.liquid
-title: For everlost and Grollow!
+title: File tools
 page-id: files
 ---
 <main class="mt-5 ms-auto me-auto mw"
