--- a/misc.html
+++ b/misc.html
@@ -1,6 +1,6 @@
 ---
 layout: layout.liquid
-title: For everlost and Grollow!
+title: Miscellaneous tools
 page-id: misc
 ---
 <main class="mt-5 ms-auto me-auto mw"
