Add partials for hex frequencies
Additionally replaced the generateHexFrequencies funtion with the simplified and updated countArrayFreq

--- a/hex.html
+++ b/hex.html
@@ -13,4 +13,5 @@ page-id: hex
             {% render "partials/hex/home" %}
             {% include "partials/hex/shift" %}
             {% include "partials/hex/reversehex" %}
+            {% include "partials/hex/frequencies" %}
         </main>
