--- a/ciphers.html
+++ b/ciphers.html
@@ -14,5 +14,6 @@ page-id: ciphers
             {% include "partials/ciphers/caesar" %}
             {% include "partials/ciphers/sub" %}
             {% include "partials/ciphers/vigenere" %}
+            {% include "partials/ciphers/beaufort" %}
             {% include "partials/ciphers/hash" %}
         </main>
