Reverse alphabet -> Atbash
Because I'm silly and forgot what Atbash was

--- a/ciphers.html
+++ b/ciphers.html
@@ -15,6 +15,6 @@ page-id: ciphers
             {% include "partials/ciphers/sub" %}
             {% include "partials/ciphers/vigenere" %}
             {% include "partials/ciphers/beaufort" %}
-            {% include "partials/ciphers/alpha" %}
+            {% include "partials/ciphers/atbash" %}
             {% include "partials/ciphers/hash" %}
         </main>
