--- a/ciphers.html
+++ b/ciphers.html
@@ -15,6 +15,7 @@ page-id: ciphers
             {% include "partials/ciphers/sub" %}
             {% include "partials/ciphers/vigenere" %}
             {% include "partials/ciphers/beaufort" %}
+            {% include "partials/ciphers/rail" %}
             {% include "partials/ciphers/atbash" %}
             {% include "partials/ciphers/hash" %}
         </main>
