Add chaocipher partial and hook up to the tools
Also fixed some text strings in other partials and removed lettersOnly from firing on the decode

--- a/ciphers.html
+++ b/ciphers.html
@@ -16,6 +16,7 @@ page-id: ciphers
             {% include "partials/ciphers/vigenere" %}
             {% include "partials/ciphers/beaufort" %}
             {% include "partials/ciphers/rail" %}
+            {% include "partials/ciphers/chaos" %}
             {% include "partials/ciphers/atbash" %}
             {% include "partials/ciphers/hash" %}
         </main>
