Scaffold of all ONI tools
Added some basic info, note of the function and blurb to try it in the web console

--- a/oni.html
+++ b/oni.html
@@ -11,4 +11,11 @@ page-id: oni
         data-bs-root-margin="10% 0% -90%"
         id="content">
             {% render "partials/oni/home" %}
+            {% include "partials/oni/unmunge" %}
+            {% include "partials/oni/lookahead" %}
+            {% include "partials/oni/mergeb64" %}
+            {% include "partials/oni/unscramble" %}
+            {% include "partials/oni/interleave" %}
+            {% include "partials/oni/strings" %}
+            {% include "partials/oni/calendar" %}
         </main>
