Expose keyword cipher in UI and fix description output

--- a/ciphers.html
+++ b/ciphers.html
@@ -14,6 +14,7 @@ page-id: ciphers
             {% include "partials/ciphers/caesar" %}
             {% include "partials/ciphers/sub" %}
             {% include "partials/ciphers/vigenere" %}
+            {% include "partials/ciphers/keyword" %}
             {% include "partials/ciphers/beaufort" %}
             {% include "partials/ciphers/rail" %}
             {% include "partials/ciphers/chaos" %}
