--- a/index.html
+++ b/index.html
@@ -1,19 +1,11 @@
 ---
 layout: layout.liquid
 title: For everlost and Grollow!
+description: Convrtr is a simple JavaScript based tool to quickly convert text between different formats and to help create or solve data driven puzzles and ciphers.
 page-id: home
 ---
-<main class="mt-5 ms-auto me-auto mw"
-        data-bs-spy="scroll" 
-        data-bs-target="#navbarText" 
-        data-bs-smooth-scroll="true"
-        data-bs-threshold="0,1"
-        data-bs-root-margin="10% 0% -90%"
-        id="content">
-            {% render "partials/home/home" %}
             {% include "partials/home/convrtrs" %}
             {% include "partials/home/tools" %}
             {% include "partials/home/replace" %}
             {% include "partials/home/flip" %}
             {% include "partials/home/frequencies" %}
-        </main>
