--- a/hex.html
+++ b/hex.html
@@ -1,17 +1,9 @@
 ---
 layout: layout.liquid
 title: Hexadecimal tools
+description: Various tools for working with hexadecimal strings.
 page-id: hex
 ---
-<main class="mt-5 ms-auto me-auto mw"
-        data-bs-spy="scroll" 
-        data-bs-target="#navbarText" 
-        data-bs-smooth-scroll="true"
-        data-bs-threshold="0,1"
-        data-bs-root-margin="10% 0% -90%"
-        id="content">
-            {% render "partials/hex/home" %}
             {% include "partials/hex/shift" %}
             {% include "partials/hex/reversehex" %}
             {% include "partials/hex/frequencies" %}
-        </main>
