--- a/oni.html
+++ b/oni.html
@@ -1,16 +1,9 @@
 ---
 layout: layout.liquid
 title: ONI tools
+description: A collection of custom decoding tools for encrypting and decrypting data, built primarily for use in data-drive ARG puzzles (specifically the <a href="https://www.halopedia.org/Section_3_ARG" class="text-convrtr">Halo 4 Section 3 ARG</a>). These tools are a JavaScript port or a Toolkit originally written in ruby, which can be found here - <a href="https://github.com/Sepheus/ONI-Tools/tree/master/Toolkit" class="text-convrtr">https://github.com/Sepheus/ONI-Tools/tree/master/Toolkit</a></p><p class="px-2"><strong>This section is still a work in progress</strong>, and tools are currently only available via the web console until a UI can be built for them. Most require specifically crafted data packets that were built for the ARG, there may still be some floating around out in space somewhere!</p>
 page-id: oni
 ---
-<main class="mt-5 ms-auto me-auto mw"
-        data-bs-spy="scroll" 
-        data-bs-target="#navbarText" 
-        data-bs-smooth-scroll="true"
-        data-bs-threshold="0,1"
-        data-bs-root-margin="10% 0% -90%"
-        id="content">
-            {% render "partials/oni/home" %}
             {% include "partials/oni/unmunge" %}
             {% include "partials/oni/lookahead" %}
             {% include "partials/oni/mergeb64" %}
@@ -18,4 +11,3 @@ page-id: oni
             {% include "partials/oni/interleave" %}
             {% include "partials/oni/strings" %}
             {% include "partials/oni/calendar" %}
-        </main>
