--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@ title: For everlost and Grollow!
 description: Convrtr is a simple JavaScript based tool to quickly convert text between different formats and to help create or solve data driven puzzles and ciphers.
 page-id: home
 ---
-            {% include "partials/home/convrtrs" %}
-            {% include "partials/home/tools" %}
-            {% include "partials/home/replace" %}
-            {% include "partials/home/flip" %}
-            {% include "partials/home/frequencies" %}
+
+{% assign folderPath = "partials/" | append: page-id %}
+{% assign files = folderPath | listFiles %} 
+{% for file in files %}
+    {% include file %}
+{% endfor %}
