--- a/hex.html
+++ b/hex.html
@@ -4,6 +4,9 @@ title: Hexadecimal tools
 description: Various tools for working with hexadecimal strings.
 page-id: hex
 ---
-            {% include "partials/hex/shift" %}
-            {% include "partials/hex/reversehex" %}
-            {% include "partials/hex/frequencies" %}
+
+{% assign folderPath = "partials/" | append: page-id %}
+{% assign files = folderPath | listFiles %} 
+{% for file in files %}
+    {% include file %}
+{% endfor %}
