--- a/oni.html
+++ b/oni.html
@@ -4,10 +4,9 @@ title: ONI tools
 description: A collection of custom decoding tools for encrypting and decrypting data, built primarily for use in data-drive ARG puzzles (specifically the <a href="https://www.halopedia.org/Section_3_ARG" class="text-convrtr">Halo 4 Section 3 ARG</a>). These tools are a JavaScript port or a Toolkit originally written in ruby, which can be found here - <a href="https://github.com/Sepheus/ONI-Tools/tree/master/Toolkit" class="text-convrtr">https://github.com/Sepheus/ONI-Tools/tree/master/Toolkit</a></p><p class="px-2"><strong>This section is still a work in progress</strong>, and tools are currently only available via the web console until a UI can be built for them. Most require specifically crafted data packets that were built for the ARG, there may still be some floating around out in space somewhere!</p>
 page-id: oni
 ---
-            {% include "partials/oni/unmunge" %}
-            {% include "partials/oni/lookahead" %}
-            {% include "partials/oni/mergeb64" %}
-            {% include "partials/oni/unscramble" %}
-            {% include "partials/oni/interleave" %}
-            {% include "partials/oni/strings" %}
-            {% include "partials/oni/calendar" %}
+
+{% assign folderPath = "partials/" | append: page-id %}
+{% assign files = folderPath | listFiles %} 
+{% for file in files %}
+    {% include file %}
+{% endfor %}
