Added new shortcode to pass in filename of the including page
For example - a partial located in partials/example.liquid
Includes a component in components/test.liquid
Calling {{ filename }} within test.liquid will return 'example' (sans quotes)

--- a/oni.html
+++ b/oni.html
@@ -6,7 +6,7 @@ page-id: oni
 ---
 
 {% assign folderPath = "partials/" | append: page-id %}
-{% assign files = folderPath | listFiles %} 
-{% for file in files %}
-    {% include file %}
+{%- assign files = folderPath | listFilesWithInfo -%}
+{% for file in files -%}
+    {% include file.filePath, filename: file.fileName %}
 {% endfor %}
