--- a/misc.html
+++ b/misc.html
@@ -6,9 +6,9 @@ page-id: misc
 ---
 
 {% assign folderPath = "partials/" | append: page-id %}
-{% assign files = folderPath | listFiles %} 
-{% for file in files %}
-    {% include file %}
+{%- assign files = folderPath | listFilesWithInfo -%}
+{% for file in files -%}
+    {% include file.filePath, filename: file.fileName %}
 {% endfor %}
 
 <script>
