--- a/changelog.html
+++ b/changelog.html
@@ -2,7 +2,7 @@
 layout: layout.liquid
 title: Changelog
 description: History of feature releases, changes and bug fixes
-page-id: changelog  
+page-id: changelog
 eleventyExcludeFromCollections: true
 ---
 
@@ -18,31 +18,22 @@ eleventyExcludeFromCollections: true
                     </tr>
                 </thead>
                 <tbody class="table-group-divider">
-                
-                    {% for version in collections.changelog %}
+                    {% for version in collections.versions %}
                     <tr class="position-relative">
                         <th scope="row">
-                            <a href="{{ version.url }}"
-                                class="stretched-link link-underline link-underline-opacity-0 text-convrtr">
+                            <a href="{{ version.url }}" class="stretched-link link-underline link-underline-opacity-0 text-convrtr">
                                 {{ version.data.title }}
                             </a>
                         </th>
                         <td>{{ version.date | date: "%B %d, %Y" }}</td>
                         <td>
-                        {% if version.data.tags %}
+                            {% if version.data.tags %}
                             {% for tag in version.data.tags %}
                             {% if tag != "changelog" %}
                             <span class="badge git-badge badge-{{ tag | replace: ' ', '-' }}">{{ tag }}</span>
                             {% endif %}
                             {% endfor %}
-                        {% endif %}
-                        </td>
-                    </tr>
-                    {% else -%}
-                    <tr>
-                        <td colspan="3">
-                            There are no changelogs currently available<br />
-                            For full list of changes please see <a href="{{ pkg.releases.url }}" class="text-convrtr">Github Releases</a>.
+                            {% endif %}
                         </td>
                     </tr>
                     {% endfor %}
@@ -51,4 +42,3 @@ eleventyExcludeFromCollections: true
         </div>
     </div>
 </section>
-
