--- a/changelog.html
+++ b/changelog.html
@@ -1,7 +1,7 @@
 ---
 layout: layout.liquid
 title: Changelog
-description: History of feature releases, changes and bug fixes
+description: History of feature releases, changes and bug fixes. Click on an item to see the full changelog details.
 page-id: changelog
 eleventyExcludeFromCollections: true
 ---
@@ -10,7 +10,7 @@ eleventyExcludeFromCollections: true
     <div class="py-4 px-2 px-sm-4">
         <div class="section-heading mb-4">
             <table class="table table-hover version-list">
-                <thead>
+                <thead class="d-none d-md-table-header-group">
                     <tr>
                         <th scope="col">Version</th>
                         <th scope="col">Date</th>
@@ -21,19 +21,43 @@ eleventyExcludeFromCollections: true
                     {% for version in collections.versions %}
                     <tr class="position-relative">
                         <th scope="row">
-                            <a href="{{ version.url }}" class="stretched-link link-underline link-underline-opacity-0 text-convrtr">
-                                {{ version.data.title }}
-                            </a>
+                            <div class="row">
+                                <div class="col-3 col-sm-2 d-md-none">
+                                    <span class="fs-6 fw-medium">Version</span>
+                                </div>
+                                <div class="col">
+                                    <a href="{{ version.url }}" class="fw-medium stretched-link link-underline link-underline-opacity-0 text-convrtr">
+                                        {{ version.data.title }}
+                                    </a>
+                                </div>
+
+                            </div>
                         </th>
-                        <td>{{ version.date | date: "%B %d, %Y" }}</td>
                         <td>
-                            {% if version.data.tags %}
-                            {% for tag in version.data.tags %}
-                            {% if tag != "changelog" %}
-                            <span class="badge git-badge badge-{{ tag | replace: ' ', '-' }}">{{ tag }}</span>
-                            {% endif %}
-                            {% endfor %}
-                            {% endif %}
+                            <div class="row">
+                                <div class="col-3 col-sm-2 d-md-none">
+                                    Date
+                                </div>
+                                <div class="col">
+                                    {{ version.date | date: "%B %d, %Y" }}
+                                </div>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="row">
+                                <div class="col-3 col-sm-2 d-md-none">
+                                    Tags
+                                </div>
+                                <div class="col">
+                                    {% if version.data.tags -%}
+                                    {%- for tag in version.data.tags -%}
+                                    {% if tag != "changelog" -%}
+                                    <span class="badge git-badge badge-{{ tag | replace: ' ', '-' }}">{{ tag }}</span>
+                                    {% endif -%}
+                                    {%- endfor -%}
+                                    {%- endif %}
+                                </div>
+                            </div>
                         </td>
                     </tr>
                     {% endfor %}
