Adding pagination to the Changelog

--- a/changelog.html
+++ b/changelog.html
@@ -3,11 +3,14 @@ layout: layout.liquid
 title: Changelog
 description: History of feature releases, changes and bug fixes. Click on an item to see the full changelog details.
 page-id: changelog
+pagination:
+  data: collections.versions
+  size: 10
+permalink: "changelog/{% if pagination.pageNumber > 0 %}{{ pagination.pageNumber | plus: 1 }}/{% endif %}index.html"
 eleventyExcludeFromCollections: true
 eleventyComputed:
   description: "{{ description }}<br />You can also view the full list of changes on <a href='{{ pkg.releases.url }}' class='text-convrtr'>Github</a>"
 ---
-
 <section id="{{ filename }}" class="section">
     <div class="py-4 px-2 px-sm-4">
         <div class="section-heading mb-4">
@@ -20,7 +23,7 @@ eleventyComputed:
                     </tr>
                 </thead>
                 <tbody class="table-group-divider">
-                    {% for version in collections.versions %}
+                    {% for version in pagination.items %}
                     <tr class="position-relative">
                         <th scope="row">
                             <div class="row">
@@ -64,5 +67,48 @@ eleventyComputed:
                 </tbody>
             </table>
         </div>
+
+        <nav aria-label="Page navigation">
+            <ul class="pagination">
+                <!-- Previous Link -->
+                {% if pagination.previousPageHref %}
+                <li class="page-item">
+                    <a href="{{ pagination.previousPageHref }}" class="page-link">Previous</a>
+                </li>
+                {% else %}
+                <li class="page-item disabled">
+                    <span class="page-link">Previous</span>
+                </li>
+                {% endif %}
+
+                <!-- Page Number Links -->
+                {% assign currentPage = pagination.pageNumber %}
+                {% assign startPage = currentPage | minus: 2 %}
+                {% assign endPage = currentPage | plus: 2 %}
+                {% for pageNumber in pagination.pages %}
+                {% assign pageIndex = forloop.index0 %}
+                {% if pageIndex >= startPage and pageIndex <= endPage %} <li
+                    class="page-item {% if pageIndex == currentPage %}active{% endif %}">
+                    {% if pageIndex == currentPage %}
+                    <span class="page-link">{{ pageIndex | plus: 1 }}</span>
+                    {% else %}
+                    <a href="{{ pagination.hrefs[pageIndex] }}" class="page-link">{{ pageIndex | plus: 1 }}</a>
+                    {% endif %}
+                    </li>
+                    {% endif %}
+                    {% endfor %}
+
+                    <!-- Next Link -->
+                    {% if pagination.nextPageHref %}
+                    <li class="page-item">
+                        <a href="{{ pagination.nextPageHref }}" class="page-link">Next</a>
+                    </li>
+                    {% else %}
+                    <li class="page-item disabled">
+                        <span class="page-link">Next</span>
+                    </li>
+                    {% endif %}
+            </ul>
+        </nav>
     </div>
 </section>
